# agents_herd

./: .env_example  .gitignore  README.md  master_agent.py  master_agent_bak.py  pyproject.toml  requirements.txt  table_graph.json  todo_dag.txt
agents_herd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
data/: import_to_sqlite.py  insert_milvus.py  query_examples.py  register_table_header.py  search_table.py
data/table_headers/: delivery_confirmation.md  internal_adjustment.md  project_change_request.md  sales_contract.md  sales_contract_addendum.md  sales_order.csv  sales_order.md  shipment_request.csv  shipment_request.md
data/table_headers_simulation/: delivery_confirmation.csv  delivery_confirmation.json  delivery_handover.csv  delivery_handover.json  internal_adjustment.json  inventory.csv  inventory.json  inventory.md  order_items.csv  order_items.json  project_change_request.json  sales_contract.csv  sales_contract.json  sales_contract_addendum.csv  sales_contract_addendum.json  sales_order.json  shipment_request.csv  shipment_request.json
data/table_ontology/: tables.json
data/table_ontology_simulation/: hyper_schema_generated.json  hyper_schema_generated_1104.json  tables.json  (+1 more)
graph/: build_graph.py  graph_match.py
memory/: long_term_memory.py  memory_extractor.py
models/: llm.py  llm_openai.py
tools/: calculate.py  mcp_client.py  mcp_ser_test.py  mcp_server.py  sales_contract.py  search_database.py  task_dag.py  think.py  think_to_board.py  todo.py
utils/: logger.py  note_board.py  safe_file.py  trival_process.py  whiteboard.py
(+1 files in other folders)
