[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agents_herd"
version = "0.1.0"
description = "Agents Herd Project"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Wang Ling", email = "wangling@example.com"}
]
dependencies = [
    "pymilvus",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
]

[tool.setuptools]
packages = {find = {where = ["."], include = ["*"]}}