[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agents_herd"
version = "0.1.0"
description = "Agents Herd Project"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Wang Ling", email = "wangling@example.com"}
]
dependencies = [
    "dotenv>=0.9.9",
    "fastmcp>=2.13.0.2",
    "mcp>=1.20.0",
    "openai>=2.7.1",
    "pymilvus",
    "python-dotenv>=1.2.1",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
]

[tool.setuptools]
packages = {find = {where = ["."], include = ["*"]}}
